--- a/Brainly-Frontend/package.json
+++ b/Brainly-Frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.483.0",
+    "mongoose": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
